--- a/css/styles.css
+++ b/css/styles.css
@@ -75,12 +75,9 @@ body {
 }
 
 section {
-  flex-shrink: 0;
-}
-
-figure > img {
-  height: 100vh;
-  width: auto;
+  width: max(300px, 30vw);
+  background-size: auto 100vh;
+  background-image: url(../img/liz-a-YgrXd2DL5Po-unsplash.jpg);
 }
 
 h1 {
@@ -91,27 +88,62 @@ h1 {
   position: relative;
   text-align: center;
   color: aliceblue;
-  top: -73vh;
+  top: 33vh;
   font-family: "Norse Bold";
   font-size: 5rem;
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 figcaption {
   color: aliceblue;
   position: relative;
   text-align: center;
-  top: -5vh;
+  top: 95vh;
 }
 
 aside {
-  margin: 150px 200px 150px 100px;
+  width: max(200px, 70vw);
+  padding-top: 6rem;
   display: flex;
   flex-direction: column;
+  background-color: aliceblue;
+}
+
+.form-para {
+  padding-left: 10rem;
+  width: max(540px, 42vw);
+}
+
+button {
+  cursor: pointer;
+  margin-top: 2rem;
+  font-size: 1.1rem;
+  background-color: rgb(0, 97, 0);
+  border: 1px inset rgb(0, 69, 0);
+  border-radius: 5px;
+  color: aliceblue;
+  padding: 0.7rem 1.5rem;
+  box-shadow: 2px 3px 7px 1px rgba(0, 0, 0, 0.2);
+}
+
+button:hover {
+  background-color: rgb(0, 75, 0);
+}
+
+button:active {
+  transform: translate(2px, 3px);
+}
+
+.button-para {
+  padding-left: 10rem;
+  padding-right: 14rem;
+  font-size: 1rem;
 }
 
 p {
-  padding: 15px;
+  padding: 1rem 3rem 0 0;
+  font-size: 1.3rem;
+  font-weight: bold;
 }
 
 legend {
@@ -121,14 +153,45 @@ legend {
   margin-right: clamp(20px, 65vh, 70vh);
 }
 
+label {
+  font-size: 0.9rem;
+  text-transform: uppercase;
+  letter-spacing: 0.2rem;
+  color: dimgray;
+}
+
+input {
+  width: 18rem;
+}
+
 p > label {
   display: block;
 }
 
+form {
+  margin-top: 2rem;
+}
+
 .container {
+  padding-left: 10rem;
+  padding-right: 14rem;
+  padding-bottom: 3rem;
   margin-top: 20px;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: flex-start;
+  border-top: 1px solid #000;
+  border: 1px solid transparent;
+  box-shadow: 0 4px 10px -2px rgba(0, 0, 0, 0.2);
+  background-color: white;
+}
+
+a {
+  color: aliceblue;
+}
+
+.button-para > a {
+  color: rgb(0, 97, 0);
+  text-decoration: none;
 }
